--- a/src/app/modules/supplier-portal/layouts/supplier-portal-footer/supplier-portal-footer.component.html
+++ b/src/app/modules/supplier-portal/layouts/supplier-portal-footer/supplier-portal-footer.component.html
@@ -1,4 +1,4 @@
-<section class="bg-gsa-light-grey px-0 py-2 m-0 sticky-bottom" >
+<section class="bg-white px-0 py-2 m-0" >
     <div class="container-fluid px-0">    
       <div class="mx-auto">
         <div class="">
