--- a/src/app/modules/supplier-portal/supplier-portal.component.html
+++ b/src/app/modules/supplier-portal/supplier-portal.component.html
@@ -1,6 +1,7 @@
-<app-supplier-portal-main-layout>
+<div class="supplier-portal-layout">
+  <app-supplier-portal-main-layout>
     <ng-template #body>
       <router-outlet></router-outlet>
     </ng-template>
-</app-supplier-portal-main-layout>
-  
+  </app-supplier-portal-main-layout>
+</div>
