--- a/src/app/modules/supplier-portal/layouts/supplier-portal-workspace-layout/supplier-portal-workspace-layout.component.html
+++ b/src/app/modules/supplier-portal/layouts/supplier-portal-workspace-layout/supplier-portal-workspace-layout.component.html
@@ -1,6 +1,7 @@
-<section>
+<section class="bg-gsa-light-grey">
     <div class="container-fluid px-5 py-5">
         <div class="row content-row pb-3">
+
             <div class="col-sm-12 col-md-4 col-lg-3 col-xl-3 d-xs-none d-sm-none d-md-block">
                 <div class="sticky-top">
 
@@ -10,17 +11,15 @@
 
                 </div>
             </div>
-            <div class="col">
-                <div class="row">
-                    <div class="col-lg">
 
-                        <ng-container *ngIf="body">
-                            <ng-container [ngTemplateOutlet]="body"></ng-container>
-                        </ng-container>
-                        
-                    </div>
-                </div>
+            <div class="col-sm-12 col-md-8 col-lg-9 col-xl-9 ">
+
+                <ng-container *ngIf="body">
+                    <ng-container [ngTemplateOutlet]="body"></ng-container>
+                </ng-container>
+
             </div>
+
         </div>
     </div>
 </section>
