--- a/src/app/modules/supplier-portal/views/offer-form/negotiators/negotiators.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/negotiators/negotiators.component.html
@@ -1,78 +1,158 @@
-<form id="negotiators">
-
-    <div class="usa-alert usa-alert-info mb-4">
-        <div class="usa-alert-body">
-        <p><b class="black">Who will negotiate your eOffer?</b></p>
-        <p align="justify">Offerors can add multiple negotiators. A minimum of one negotiator must have signature
-            authority, but it is STRONGLY recommended to have at least two valid Negotiators.
-            Negotiators without signature authority may prepare the eOffer but only negotiators with signature authority
-            may submit the eOffer and sign the Contract.
-        </p>
-    </div>
-    </div>
-    <div class="table2">
-        <h4 class="type1" id="yournegs">Your Negotiator(s)</h4>
-        <table id="negInfo" class="table table-responsive table-striped table-flush buttonsTable" aria-labelledby="yournegs">
-            <thead>
-                <tr>
-                    <th scope="col" width="40%">Name</th>
-                    <th scope="col" width="40%">Role</th>
+<app-form-card [sectionState]="sectionData" *ngIf="sectionData.showSection">
+    <ng-template #formCardActions>
+        <ng-container [ngTemplateOutlet]="sectionActions"></ng-container>
+    </ng-template>
+    <ng-template #formCardBody>
+        <ng-container [ngTemplateOutlet]="readonlySection"></ng-container>
+    </ng-template>
+</app-form-card>
 
 
+<!-- Readonly Section -->
+<ng-template #readonlySection>
+    <form id="negotiators">
 
-                    <th scope="col" width="10%">Edit</th>
-                    <th scope="col" width="10%">Delete</th>
+        <div class="usa-alert usa-alert-info mb-4">
+            <div class="usa-alert-body">
+                <p><b class="black">Who will negotiate your eOffer?</b></p>
+                <p align="justify">Offerors can add multiple negotiators. A minimum of one negotiator must have
+                    signature
+                    authority, but it is STRONGLY recommended to have at least two valid Negotiators.
+                    Negotiators without signature authority may prepare the eOffer but only negotiators with signature
+                    authority
+                    may submit the eOffer and sign the Contract.
+                </p>
+            </div>
+        </div>
+        <div class="table2">
+            <h4 class="type1" id="yournegs">Your Negotiator(s)</h4>
+            <table id="negInfo" class="table table-responsive table-striped table-flush buttonsTable"
+                aria-labelledby="yournegs">
+                <thead>
+                    <tr>
+                        <th scope="col" width="40%">Name</th>
+                        <th scope="col" width="40%">Role</th>
 
-                </tr>
-            </thead>
-            <tbody>
+
+
+                        <th scope="col" width="10%">Edit</th>
+                        <th scope="col" width="10%">Delete</th>
+
+                    </tr>
+                </thead>
+                <tbody>
 
 
 
-                <script language="JavaScript" type="text/javascript">< !--hide this script from non - javascript - enabled browsers
-                    function preSelect(name, value) {
-                        for (i = 0; i < name.length; i++) {
-                            if (name[i].value == value) {
-                                name.selectedIndex = i;
-                                break;
+                    <script language="JavaScript" type="text/javascript">< !--hide this script from non - javascript - enabled browsers
+                        function preSelect(name, value) {
+                            for (i = 0; i < name.length; i++) {
+                                if (name[i].value == value) {
+                                    name.selectedIndex = i;
+                                    break;
+                                }
                             }
                         }
-                    }
 // stop hiding -->
 
-                </script>
-                <tr>
-                    <td>Luis Najera</td>
-                    <td>Authorized to sign</td>
-                    <td class="tbl-button"><a title="Edit Negotiator Luis Najera Details"
-                            href="https://eoffer-test.fas.gsa.gov/eOffer/offerNegotiatorAction.do?method=edit&amp;Type=editnegotiator&amp;negotiatorId=1"
-                            class="btn btn-primary btn-sm">Edit</a></td>
-                    <td class="tbl-button"><a title="Delete Negotiator Luis Najera Details"
-                            href="https://eoffer-test.fas.gsa.gov/eOffer/deleteAction.do?method=delete&amp;source=negotiator&amp;negotiatorId=1"
-                            class="btn btn-primary btn-sm">Delete</a></td>
-                </tr>
+                    </script>
+                    <tr>
+                        <td>Luis Najera</td>
+                        <td>Authorized to sign</td>
+                        <td class="tbl-button"><a title="Edit Negotiator Luis Najera Details"
+                                href="https://eoffer-test.fas.gsa.gov/eOffer/offerNegotiatorAction.do?method=edit&amp;Type=editnegotiator&amp;negotiatorId=1"
+                                class="btn btn-primary btn-sm">Edit</a></td>
+                        <td class="tbl-button"><a title="Delete Negotiator Luis Najera Details"
+                                href="https://eoffer-test.fas.gsa.gov/eOffer/deleteAction.do?method=delete&amp;source=negotiator&amp;negotiatorId=1"
+                                class="btn btn-primary btn-sm">Delete</a></td>
+                    </tr>
 
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        </div>
 
-
-
-
-    </div>
-
-    <!--negotiator list Ends-->
-
-    <div class="button-row">
-        <input type="submit" value="Add New Negotiator" class="btn btn-default" name="addNewNegotiator">
+    </form>
+</ng-template>
 
 
+<!-- Edit Section -->
+<ng-template #editSection>
+    <form id="negotiators">
 
-        <input type="Submit" value="Save and Continue" class="btn btn-primary" name="saveAndContinue">
+        <div class="usa-alert usa-alert-info mb-4">
+            <div class="usa-alert-body">
+                <p><b class="black">Who will negotiate your eOffer?</b></p>
+                <p align="justify">Offerors can add multiple negotiators. A minimum of one negotiator must have
+                    signature
+                    authority, but it is STRONGLY recommended to have at least two valid Negotiators.
+                    Negotiators without signature authority may prepare the eOffer but only negotiators with signature
+                    authority
+                    may submit the eOffer and sign the Contract.
+                </p>
+            </div>
+        </div>
+        <div class="table2">
+            <h4 class="type1" id="yournegs">Your Negotiator(s)</h4>
+            <table id="negInfo" class="table table-responsive table-striped table-flush buttonsTable"
+                aria-labelledby="yournegs">
+                <thead>
+                    <tr>
+                        <th scope="col" width="40%">Name</th>
+                        <th scope="col" width="40%">Role</th>
 
 
 
+                        <th scope="col" width="10%">Edit</th>
+                        <th scope="col" width="10%">Delete</th>
+
+                    </tr>
+                </thead>
+                <tbody>
 
 
-    </div>
 
-</form>
+                    <script language="JavaScript" type="text/javascript">< !--hide this script from non - javascript - enabled browsers
+                        function preSelect(name, value) {
+                            for (i = 0; i < name.length; i++) {
+                                if (name[i].value == value) {
+                                    name.selectedIndex = i;
+                                    break;
+                                }
+                            }
+                        }
+// stop hiding -->
+
+                    </script>
+                    <tr>
+                        <td>Luis Najera</td>
+                        <td>Authorized to sign</td>
+                        <td class="tbl-button"><a title="Edit Negotiator Luis Najera Details"
+                                href="https://eoffer-test.fas.gsa.gov/eOffer/offerNegotiatorAction.do?method=edit&amp;Type=editnegotiator&amp;negotiatorId=1"
+                                class="btn btn-primary btn-sm">Edit</a></td>
+                        <td class="tbl-button"><a title="Delete Negotiator Luis Najera Details"
+                                href="https://eoffer-test.fas.gsa.gov/eOffer/deleteAction.do?method=delete&amp;source=negotiator&amp;negotiatorId=1"
+                                class="btn btn-primary btn-sm">Delete</a></td>
+                    </tr>
+
+                </tbody>
+            </table>
+        </div>
+
+    </form>
+</ng-template>
+
+
+<!-- Actions-->
+<ng-template #sectionActions>
+    <app-modal [modalTitle]="sectionData.name" [showModalBtnLabel]="'Edit'" [modalSize]="'xl'">
+        <ng-template #modalBody>
+            <ng-container [ngTemplateOutlet]="editSection"></ng-container>
+        </ng-template>
+        <ng-template #modalFooter>
+            <input type="submit" value="Save and Continue" id="saveAndContinue" class="btn btn-primary">
+        </ng-template>
+    </app-modal>
+
+    <button *ngIf="sectionData.sectionStatus == 'Awarded'" class="btn btn-primary btn-sm float-right">New Mod</button>
+
+</ng-template>
