--- a/src/assets/theme/utilities.css
+++ b/src/assets/theme/utilities.css
@@ -10,6 +10,24 @@
 .br-0 {
 	border-radius: 0px !important;
 }
+.br-1 {
+	border-radius: 1px !important;
+}
+.br-2 {
+	border-radius: 2px !important;
+}
+.br-3 {
+	border-radius: 3px !important;
+}
+.br-4 {
+	border-radius: 4px !important;
+}
+.br-5 {
+	border-radius: 5px !important;
+}
+.br-6 {
+	border-radius: 6px !important;
+}
 .bw-0 {
 	border-width: 0px !important;
 }
@@ -76,6 +94,15 @@ td.w-15 {
   display: -ms-flexbox !important;
   display: flex !important;
 }
+
+.d-flex-row {
+  flex-direction: row;
+}
+
+.d-flex-end {
+  justify-content: flex-end;
+}
+
 
 .d-inline-flex {
   display: -ms-inline-flexbox !important;
